tests/snapshots/examples_fixtures/type_system__02_effect_signatures.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/02_effect_signatures.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO, Time).

  --> examples/type_system/02_effect_signatures.flx:14:1
   |
14 | log_now("timestamp=")
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/02_effect_signatures.flx:14:1
   |
14 | log_now("timestamp=")
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/02_effect_signatures.flx:15:1
   |
15 | greet("Flux")
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
== stdout ==
<not executed>
